# weather-edge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_ARCHIVE.md  README.md  SECURITY.md  codex-test.txt  pyproject.toml
docs/: PROVING_RUN_REVIEW.md  backtest_results_2026-04-01.txt  redeem_proxy_analysis.md
scripts/: build_bias_table.py  build_station_offsets.py  check_live.py  dump_dust.py  hindcast.py  run_redeem.py  sell_half_chi.py
sql/: schema.sql
src/weather_edge/: __init__.py  __main__.py  cli.py  config.py  db.py  live_state.py  persistence.py  reporting.py  retry.py  scheduler.py
src/weather_edge/analysis/: arbitrage.py  backtester.py  bias_correction.py  claude_reasoning.py  competitor_tracker.py  consensus.py  contracts.py  correlation_matrix.py  cross_market.py  daily_report.py  edge.py  enso_regime.py  execution_analytics.py  exit_monitor.py  forecast_trends.py  gemini_reasoning.py  learner.py  market_mapper.py  model_timing.py  pattern_detector.py  regret_tracker.py  resolver.py  risk_controls.py  service_health.py  sniper.py  weather_alerts.py  wet_bulb.py  whale_tracker.py
src/weather_edge/dashboard/: app.py
src/weather_edge/fetchers/: gribstream.py  metar.py  openmeteo.py  polymarket.py
src/weather_edge/models/: enums.py  orm.py  (+1 more)
tests/: test_backtester_costs.py  test_bucket_probability.py  test_contracts.py  test_edge_math.py  test_hkg_fix.py  test_learner.py  test_live_safety.py  test_metar_parsing.py  test_paper_costs.py  test_paper_exit.py  test_resolver.py  test_scheduler_filter.py  test_strategy_refinements.py
(+8 files in other folders)
