[project]
name = "weather-edge"
version = "0.1.0"
description = "Weather prediction market edge detection and paper trading system"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.7",
    "apscheduler>=3.10",
    "python-dateutil>=2.8",
    "redis>=5.0",
    "hiredis>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]
dashboard = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "jinja2>=3.1",
]
execution = [
    "py-clob-client>=0.5",
    "web3>=6.0",
]

[project.scripts]
weather-edge = "weather_edge.cli:cli"

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
